--- a/assets/translations/ko-KR.json
+++ b/assets/translations/ko-KR.json
@@ -1,4 +1,7 @@
 {
+  "app_name" : "투어캠",
+  "share_description" : "투어캠앱에서 확인해보세요.",
+  "share_button" : "앱에서 보기",
   "common_start" : "시작하기",
   "permission_information_message" : "앱 사용을 위해 필요한 필수 권한 허용이 필요합니다!\n아래의 내용을 확인하시고 시작하기 버튼을 눌러 권한을 허용해주세요.",
   "permission_gps_information_title" : "정확한 위치 권한",
